--- a/package.json
+++ b/package.json
@@ -6,7 +6,10 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "webpack",
-    "dev": "webpack-dev-server --open"
+    "dev": "webpack-dev-server --open",
+    "test-connect": "babel-node src/server/connect-db",
+    "initialize": "babel-node src/server/initialize-db"
+    
   },
   "keywords": [],
   "author": "",
@@ -18,6 +21,7 @@
     "@babel/preset-react": "7.0.0",
     "@babel/register": "7.0.0",
     "babel-loader": "8.0.2",
+    "mongodb": "^3.4.0",
     "webpack": "4.17.2",
     "webpack-cli": "3.1.2",
     "webpack-dev-server": "3.1.7"
